[package]
name = "topper"
version = "0.1.0"
authors = ["Seurimas <nicholasanderson5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.4.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.4.0"
strum = "0.16.0"
strum_macros = "0.16.0"
rand = "0.7"
regex = "1"
log = "^0.4.8"
simplelog = "^0.7.4"
chrono = "0.4"
sled = "0.31.0"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.4", features = ["json"] }
web-view = { git = "https://github.com/Boscop/web-view", features = ["edge"] }