[package]
name = "topper-explainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
topper-core = { path = "../topper-core" }
topper-aetolia = { path = "../topper-aetolia" }
topper-derive = { path = "../topper-derive" }
num_enum = "0.5.11"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"
rand = "0.8.5"
regex = "1"
log = "^0.4.8"
simplelog = "^0.12.1"
trunk = "0.16.0"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
js-sys = "^0.3.55"
web-sys = { version = "^0.3.55", features = ["Location", "HtmlIFrameElement", "HtmlDocument", "DomParser", "SupportedType", "HtmlHeadElement", "Element", "HtmlElement", "Document", "StyleSheetList", "StyleSheet", "CssStyleSheet", "HtmlPreElement", "Node", "NodeList", "CssRuleList", "CssRule"] }
wasm-bindgen-futures = "^0.4.28"
futures = { version = "^0.3.19" }
urlencoding = "^2.1.0"